Main header: fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ button:focus {
 	top: 0;
 	width: 100%;
 	padding: 10px 30px;
+
+	z-index: 100;
 }
 
 .header-nav {
